한국 캐릭터 클래스 추가

--- a/Codes_Jinsu/Headsoccer_Server/TCPServer_FixedVariable.vcxproj.filters
+++ b/Codes_Jinsu/Headsoccer_Server/TCPServer_FixedVariable.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="Headsoccer_Server.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Korea.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CHARACTER.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Korea.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CHARACTER.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
