--- a/Codes_Jinsu/Headsoccer_Server/TCPServer_FixedVariable.vcxproj
+++ b/Codes_Jinsu/Headsoccer_Server/TCPServer_FixedVariable.vcxproj
@@ -144,7 +144,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CHARACTER.cpp" />
     <ClCompile Include="Headsoccer_Server.cpp" />
+    <ClCompile Include="Korea.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CHARACTER.h" />
+    <ClInclude Include="Korea.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
