소켓 통신 구조 설정
Server는 Console을, Client는 Window를 사용하도록. 윈도우 크기는 1000 * 740.

--- a/Codes_Seonghun/HeadSoccerClient/HeadSoccerClient.vcxproj
+++ b/Codes_Seonghun/HeadSoccerClient/HeadSoccerClient.vcxproj
@@ -118,12 +118,12 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
