--- a/Codes_Jinsu/Headsoccer_Server/TCPServer_FixedVariable.vcxproj
+++ b/Codes_Jinsu/Headsoccer_Server/TCPServer_FixedVariable.vcxproj
@@ -144,11 +144,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Brazil.cpp" />
+    <ClCompile Include="Canada.cpp" />
     <ClCompile Include="CHARACTER.cpp" />
     <ClCompile Include="Headsoccer_Server.cpp" />
     <ClCompile Include="Korea.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Brazil.h" />
+    <ClInclude Include="Canada.h" />
     <ClInclude Include="CHARACTER.h" />
     <ClInclude Include="Korea.h" />
   </ItemGroup>
