--- a/Codes_Jinsu/Headsoccer_Server/TCPServer_FixedVariable.vcxproj.filters
+++ b/Codes_Jinsu/Headsoccer_Server/TCPServer_FixedVariable.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="CHARACTER.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Brazil.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Canada.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Korea.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="CHARACTER.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Brazil.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Canada.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
