Canada 클래스 추가, 폰트정보 인코딩 오류 수정

--- a/Codes_Seonghun/HeadSoccerClient/HeadSoccerClient.vcxproj
+++ b/Codes_Seonghun/HeadSoccerClient/HeadSoccerClient.vcxproj
@@ -123,11 +123,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Canada.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Korea.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Canada.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Korea.h" />
   </ItemGroup>
