--- a/Codes_Seonghun/HeadSoccerClient/HeadSoccerClient.vcxproj.filters
+++ b/Codes_Seonghun/HeadSoccerClient/HeadSoccerClient.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Korea.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Canada.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Korea.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Canada.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
