Brazil 클래스 추가

--- a/Codes_Seonghun/HeadSoccerClient/HeadSoccerClient.vcxproj
+++ b/Codes_Seonghun/HeadSoccerClient/HeadSoccerClient.vcxproj
@@ -123,12 +123,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Brazil.cpp" />
     <ClCompile Include="Canada.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Korea.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Brazil.h" />
     <ClInclude Include="Canada.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Korea.h" />
