--- a/Codes_Seonghun/HeadSoccerClient/HeadSoccerClient.vcxproj.filters
+++ b/Codes_Seonghun/HeadSoccerClient/HeadSoccerClient.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Canada.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Brazil.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h">
@@ -36,6 +39,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Canada.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Brazil.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
