서버 Ball 클래스 추가
+ 클라이언트 화면 사이즈(RECT WinSize) 추가
+ 스레드-세이프 플레이어 넘버 부여 코드 순환구조로 변경

--- a/Codes_Seonghun/HeadSoccerServer/HeadSoccerServer.vcxproj
+++ b/Codes_Seonghun/HeadSoccerServer/HeadSoccerServer.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Brazil.cpp" />
     <ClCompile Include="Canada.cpp" />
     <ClCompile Include="CHARACTER.cpp" />
@@ -130,6 +131,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Ball.h" />
     <ClInclude Include="Brazil.h" />
     <ClInclude Include="Canada.h" />
     <ClInclude Include="CHARACTER.h" />
